Fix spacing

--- a/style.css
+++ b/style.css
@@ -244,7 +244,7 @@ h2 {
     font-size: 2rem;
     font-weight: 400;
     line-height: 2.5rem;
-    margin-top: 4rem;
+    /* margin-top: 4rem; */
 }
 h3 {
     font-size: 1.35rem;
@@ -357,6 +357,7 @@ section {
     margin-left: auto;
     margin-right: auto;
     width: 900px;
+    margin-bottom: 5rem;
 }
 aside {
     float: right;
